# FLOWS_DESIGN

./: .gitignore
my_project/: .env  crewai_flow.html  fun_fact.md  pyproject.toml  requirements.txt
my_project/src/my_project/: main.py  main1.py  main10.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py
